# pslg-extruder

./: CMakeLists.txt  altmain.cpp  fixedvector.hpp  generate-gl.sh  main.cpp  pslg.cpp  pslg.hpp  shader.hpp  tostring.cpp  vec.hpp  vertex.glsl
lib/gl/include/glad/: glad.h
lib/gl/src/: glad.c
lib/nanovg/: CMakeLists.txt
lib/predicates/: CMakeLists.txt
lib/predicates/src/: CMakeLists.txt
